2016-03-16  Giacomo Nannicini  <nannicini@us.ibm.com>
	* rbfopt_algorithm.py (OptAlgorithm.optimize_parallel): Added
	parallel version of the optimization engine.
	* rbfopt_algorithm.py (OptAlgorithm.optimize_serial): Code for the
	serial (standard) optimizar was moved here.
	* rbfopt_algorithm.py (optimize): Now simply redirects to either
	the serial or parallel version.
	* rbfopt_black_box.py (BlackBox): Added abstract class to define a
	black box optimization problem.
	* rbfopt_black_box_example.py (BlackBox): Added an example of an
	implementation of the BlackBox abstract class.
	* rbfopt_utils.py: Added several utility functions for parallel
	optimization.
	* README: Documentation updated to discuss the parallel optimizer.
	
2016-03-07  Giacomo Nannicini  <nannicini@us.ibm.com>
	* rbfopt_algorithm.py (OptAlgorithm): Added class for optimization
	algorithm. Allows saving/loading algorithm state.
	* rbfopt.py (rbf_optimize): Now simply redirects to OptAlgorithm.
	
2016-02-28  Giacomo Nannicini  <nannicini@us.ibm.com>
	* test_rbfopt.py: Moved to tests/rbfopt_test_interface.py.
	* tests/: Added unit tests for all modules to documentation.
	* rbfopt.py (rbf_optimize): Several buxfixes.
	* rbfopt_utils.py (several functions): Several bugfixes.
	Version 1.2.0 released.
	
2015-11-21  Giacomo Nannicini  <nannicini@sutd.edu.sg>
	* rbfopt.py (rbf_optimize): Implementation of Metric SRSM method.
	* rbfopt_utils.py: Performance improvements. Bulk version of some
	utility functions (bulk_evaluate_rbf, bulk_get_min_distance).
	* rbfopt_aux_problems.py (maximize_one_over_mu): Renamed to
	pure_global_search.
	* rbfopt_aux_problems.py (maximize_h_k): Renamed to global_search.
	* rbfopt_aux_problems.py (MetricSRSMObj): New class to support the
	Metric SRSM method.

2015-10-26  Giacomo Nannicini  <nannicini@sutd.edu.sg>
	* README: Updated installation instructions for Windows systems.

2015-09-23  Giacomo Nannicini  <nannicini@sutd.edu.sg>